codepkg/objects/Incident__c.object
<CustomObject>
    <fields>
        <fullName>Available_for_Application__c</fullName>
        <label>Available for Application</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PHOS</fullName>
                </value>
                <value>
                    <fullName>HMA</fullName>
                </value>
                <value>
                    <fullName>MARS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cost_Share_Eligibility__c</fullName>
        <description>Denotes the types of programs and services eligible with this disaster - federal, state, or both</description>
        <inlineHelpText>Will this disaster have federal funding, state funding, or both?</inlineHelpText>
        <label>Cost Share Eligibility</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Federal and State</fullName>
                </value>
                <value>
                    <fullName>Federal Only</fullName>
                </value>
                <value>
                    <fullName>State Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Declaration_Date__c</fullName>
        <description>Date the Incident was Declared</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Date the Incident was Declared</inlineHelpText>
        <label>Incident Declaration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Declaration_Number__c</fullName>
        <description>Federal Incident Declaration Number</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Incident Declaration Number. DR number if a Major Disaster, CDAA Number if CDAA-Only, etc.</inlineHelpText>
        <label>Declaration Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Declaration_Type__c</fullName>
        <description>FEMA Declaration Type - Major Incident or Emergency</description>
        <inlineHelpText>Major Incident or Emergency Declaration</inlineHelpText>
        <label>Declaration Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Major Disaster</fullName>
                </value>
                <value>
                    <fullName>Emergency</fullName>
                </value>
                <value>
                    <fullName>FMAG</fullName>
                </value>
                <value>
                    <fullName>CDAA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description of the Incident or Disaster</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Description of the Incident or Disaster</inlineHelpText>
        <label>Description</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Disaster_Recovery__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Disaster Recovery</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eamil_To_Send__c</fullName>
        <description>Put comma separated email ids</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Put comma separated email ids</inlineHelpText>
        <label>Email IDs To Send</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Eligible_Programs__c</fullName>
        <description>What Programs will provide funding for this Incident</description>
        <inlineHelpText>Programs providing funding( Ex. HMA, PA, FMAG etc.).</inlineHelpText>
        <label>Eligible Programs</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hazard Mitigation Assistance</fullName>
                </value>
                <value>
                    <fullName>Public Assistance</fullName>
                </value>
                <value>
                    <fullName>Fire Management Assistance Grants</fullName>
                </value>
                <value>
                    <fullName>HMEP</fullName>
                </value>
                <value>
                    <fullName>NEHRP</fullName>
                </value>
                <value>
                    <fullName>ISP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Event_Type__c</fullName>
        <description>The Incident or Emergency Event Type</description>
        <inlineHelpText>Event type (Ex. Fire, Flood, Earthquake etc.).</inlineHelpText>
        <label>Event Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Drought</fullName>
                </value>
                <value>
                    <fullName>Earthquake</fullName>
                </value>
                <value>
                    <fullName>Economic</fullName>
                </value>
                <value>
                    <fullName>Explosion</fullName>
                </value>
                <value>
                    <fullName>Fire</fullName>
                </value>
                <value>
                    <fullName>Flood</fullName>
                </value>
                <value>
                    <fullName>Debris &amp; Mud flows</fullName>
                </value>
                <value>
                    <fullName>Freeze</fullName>
                </value>
                <value>
                    <fullName>Hurricane</fullName>
                </value>
                <value>
                    <fullName>Landslide</fullName>
                </value>
                <value>
                    <fullName>Manmade</fullName>
                </value>
                <value>
                    <fullName>Planning</fullName>
                </value>
                <value>
                    <fullName>Snow</fullName>
                </value>
                <value>
                    <fullName>Storm</fullName>
                </value>
                <value>
                    <fullName>Tornado</fullName>
                </value>
                <value>
                    <fullName>Tree Mortality</fullName>
                </value>
                <value>
                    <fullName>Tsunami</fullName>
                </value>
                <value>
                    <fullName>Wind</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Federal_Cost_Share__c</fullName>
        <description>The Standard Federal Cost Sharing Requirement</description>
        <inlineHelpText>The Standard Federal Cost Sharing Requirement</inlineHelpText>
        <label>Federal Cost Share %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Federal_Small_Project_Threshold__c</fullName>
        <description>The Federal Small Project Threshold Amount</description>
        <inlineHelpText>The Federal Small Project Threshold Amount</inlineHelpText>
        <label>Federal Small Project Threshold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Financial_Close_End_Date__c</fullName>
        <description>This is the date that the Project was marked Closed by GPU.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Date the Project was marked closed by FPD</inlineHelpText>
        <label>Financial Close End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Financial_Close_Start_Date__c</fullName>
        <description>This is the date that the Project became 100% complete</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Date the Project was marked closed by GPU.</inlineHelpText>
        <label>Financial Close Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fire_Management_Assistance_Grant__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Fire Management Assistance Grant</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incident_Closed_Date__c</fullName>
        <description>The Incident Closed Date</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>End date of funding period for all grants for this incident.</inlineHelpText>
        <label>Performance Period Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Incident_End_Date__c</fullName>
        <description>Date the Incident Ended</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Date the Incident or Event Ended</inlineHelpText>
        <label>Incident End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Incident_Start_Date__c</fullName>
        <description>Date the Incident Started or Occurred</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Date the Incident Started or Occurred.</inlineHelpText>
        <label>Incident Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Incident_Type__c</fullName>
        <description>FEMA Declaration Type - Major Incident or Emergency.</description>
        <inlineHelpText>Type of Incident (Ex. DR, CDAA, FMAG, EM, etc.)</inlineHelpText>
        <label>Incident Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Major Disaster</fullName>
                </value>
                <value>
                    <fullName>Emergency</fullName>
                </value>
                <value>
                    <fullName>FMAG</fullName>
                </value>
                <value>
                    <fullName>CDAA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Ca_DAA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Ca DAA?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Net_Admin_Amount_Available__c</fullName>
        <defaultValue>0</defaultValue>
        <description>&quot;Pending Admin Amount Available&quot; is the sum of &quot;Pending Admin Amount Available&quot; of all the Projects of this Incident Except the one in the &quot;Withdrawn&quot; Stage.</description>
        <inlineHelpText>Sum of all &quot;Pending Admin Amount Available&quot; on the Projects in this incident.</inlineHelpText>
        <label>Pending Admin Amount Available</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Federal_Amount_Available__c</fullName>
        <defaultValue>0</defaultValue>
        <description>&quot;Pending Federal Amount Available&quot; is the sum of &quot;Pending Federal Amount Available&quot; of all the Projects of this Incident Except the one in the &quot;Withdrawn&quot; Stage.</description>
        <inlineHelpText>Sum of all &quot;Total Federal Amount Available&quot; on the Projects in this incident.</inlineHelpText>
        <label>Pending Federal Amount Available</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Incident_Amount_Available__c</fullName>
        <description>This Field shows the Net Amount Available for the Incident.</description>
        <formula>Total_Incident_Amount_Awarded__c - ( Total_Federal_Amount_Approved__c +  Total_State_Amount_Approved__c +  Total_Local_Share_Amount_Obligated__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This Field shows the Net Amount Available for the Incident.
[ Total Incident Amount Awarded - (Total Federal Amount Approved + Total State Amount Approved + Total Local Share Amount Obligated) ]</inlineHelpText>
        <label>Net Incident Amount Available</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_State_Amount_Available__c</fullName>
        <defaultValue>0</defaultValue>
        <description>&quot;Pending State Amount Available&quot; is the sum of &quot;Pending State Amount Available&quot; of all the Projects of this Incident Except the one in the &quot;Withdrawn&quot; Stage.</description>
        <inlineHelpText>Sum of all &quot;Pending State Amount Available&quot; on the Projects in this incident.</inlineHelpText>
        <label>Pending State Amount Available</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Order_No__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Incident Order No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personnel_Email_IDs__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Personnel Email IDs</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reporting_Location__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Reporting Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Financial Closeout - FPU In Progress</fullName>
                </value>
                <value>
                    <fullName>Financial Closeout FPU - Closed</fullName>
                </value>
                <value>
                    <fullName>Financial Closeout - In Review</fullName>
                </value>
                <value>
                    <fullName>Financial Closeout - Awaiting FEMA Acknowledgement</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State_Cost_Share__c</fullName>
        <description>The Standard State Cost Sharing Requirement</description>
        <inlineHelpText>The Standard State Cost Sharing Requirement</inlineHelpText>
        <label>State Cost Share %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>State_Declaration_Number__c</fullName>
        <description>State Assigned Declaration Number</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>State CDAA Declaration Number.</inlineHelpText>
        <label>State Declaration Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Small_Project_Threshold__c</fullName>
        <description>The State Small Project Threshold Amount</description>
        <inlineHelpText>The State Small Project Threshold Amount</inlineHelpText>
        <label>State Small Project Threshold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Admin_Amount_Approved__c</fullName>
        <defaultValue>0</defaultValue>
        <description>&quot;Total Admin Amount Approved&quot; is the sum of &quot;Total Admin Amount Approved&quot; on all the Projects Except the one which is in the &quot;Withdrawn&quot; stage.</description>
        <inlineHelpText>Sum of all &quot;Total Admin Amount Approved&quot; on the Projects (except the ones in Withdrawn stage).</inlineHelpText>
        <label>Total Admin Amount Approved</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Admin_Amount_Requested__c</fullName>
        <defaultValue>0</defaultValue>
        <description>&quot;Total Admin Amount Requested&quot; is the sum of &quot;Total Admin Amount Requested&quot; on all the Projects Except the one which is in the &quot;Withdrawn&quot; stage.</description>
        <inlineHelpText>Sum of all &quot;Total Admin Amount Requested&quot; on all Projects (except the ones in Withdrawn stage).</inlineHelpText>
        <label>Total Admin Amount Requested</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Federal_Amount_Approved__c</fullName>
        <defaultValue>0</defaultValue>
        <description>&quot;Total Federal Amount Approved&quot; is the sum of &quot;Total Federal Amount Approved&quot; on all the Projects Except the one which is in the &quot;Withdrawn&quot; stage.</description>
        <inlineHelpText>Sum of all &quot;Total Federal Amount Approved&quot; on the Projects (except the ones in Withdrawn stage).</inlineHelpText>
        <label>Total Federal Amount Approved</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Federal_Amount_Requested__c</fullName>
        <defaultValue>0</defaultValue>
        <description>&quot;Total Federal Amount Requested&quot; is the sum of &quot;Total Federal Amount Requested&quot; on all the Projects Except the one which is in the &quot;Withdrawn&quot; stage.</description>
        <inlineHelpText>Sum of all &quot;Total Federal Amount Requested&quot; on all Projects (except the ones in Withdrawn stage).</inlineHelpText>
        <label>Total Federal Amount Requested</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Incident_Amount_Approved__c</fullName>
        <description>&quot;Total Incident Amount Approved&quot; is sum of &quot;Total Federal Amount Approved&quot; and &quot;Total State Amount Approved&quot;.</description>
        <formula>Total_Federal_Amount_Approved__c + Total_State_Amount_Approved__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total of Federal + State amount approved.</inlineHelpText>
        <label>Total Incident Amount Approved</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Incident_Amount_Available__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Sum of Total Incident Amount Available for each Incident</description>
        <inlineHelpText>Total amount available for Disbursement excluding local share.</inlineHelpText>
        <label>Total Incident Amount Available</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Incident_Amount_Awarded__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Sum of Total Grant Amount Awarded for each Incident</description>
        <inlineHelpText>Total amount awarded by FEMA for this incident (all projects).</inlineHelpText>
        <label>Total Incident Amount Awarded</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Incident_Amount_Disbursed__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Sum of Total Grant Amount Disbursed for each Incident</description>
        <inlineHelpText>Total amount disbursed by CalOES for this incident(all projects).</inlineHelpText>
        <label>Total Incident Amount Disbursed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Incident_Amount_Requested__c</fullName>
        <description>&quot;Total Incident Amount Requested&quot; is the sum of &quot;Total Federal Amount Requested&quot; and &quot;Total State Amount Requested&quot;.</description>
        <formula>Total_Federal_Amount_Requested__c +  Total_State_Amount_Requested__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total of Federal + State amount requested.</inlineHelpText>
        <label>Total Incident Amount Requested</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Local_Share_Amount_Obligated__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total Local Share Amount Obligated is the sum of all Local Project Award, awarded in all the Projects.</description>
        <inlineHelpText>Sum of all Local Project Awards in all projects.</inlineHelpText>
        <label>Total Local Share Amount Obligated</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Net_Incident_Amount_Available__c</fullName>
        <defaultValue>0</defaultValue>
        <description>&quot;Total Pending Incident Amount Available&quot; is the sum of &quot;Total Pending Amount Available&quot; of all the Projects of this Incident Except the one in the &quot;Withdrawn&quot; Stage.</description>
        <inlineHelpText>Sum of all pending amounts available for the projects in this Incident.</inlineHelpText>
        <label>Total Pending Incident Amount Available</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_State_Amount_Approved__c</fullName>
        <defaultValue>0</defaultValue>
        <description>&quot;Total State Amount Approved&quot; is the sum of &quot;Total State Amount Approved&quot; on all the Projects Except the one which is in the &quot;Withdrawn&quot; stage.</description>
        <inlineHelpText>Sum of all &quot;Total State Amount Approved&quot; on all Projects (except the ones in Withdrawn stage).</inlineHelpText>
        <label>Total State Amount Approved</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_State_Amount_Requested__c</fullName>
        <defaultValue>0</defaultValue>
        <description>&quot;Total State Amount Requested&quot; is the sum of &quot;Total State Amount Requested&quot; on all the Projects Except the one which is in the &quot;Withdrawn&quot; stage.</description>
        <inlineHelpText>Sum of all &quot;Total State Amount Requested&quot; on the Projects (except the ones in Withdrawn stage).</inlineHelpText>
        <label>Total State Amount Requested</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Year</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>isActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>isActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isDefault__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isDefault</label>
        <type>Checkbox</type>
    </fields>
    <label>Incident</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Declaration_Number__c</columns>
        <columns>State_Declaration_Number__c</columns>
        <columns>Declaration_Date__c</columns>
        <columns>Declaration_Type__c</columns>
        <columns>Cost_Share_Eligibility__c</columns>
        <columns>NAME</columns>
        <columns>Incident_Start_Date__c</columns>
        <columns>Incident_End_Date__c</columns>
        <columns>Federal_Cost_Share__c</columns>
        <columns>State_Cost_Share__c</columns>
        <columns>Stage__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo>
            <group>GPU_users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_PA</fullName>
        <columns>Declaration_Number__c</columns>
        <columns>State_Declaration_Number__c</columns>
        <columns>Declaration_Date__c</columns>
        <columns>Declaration_Type__c</columns>
        <columns>Cost_Share_Eligibility__c</columns>
        <columns>NAME</columns>
        <columns>Incident_Start_Date__c</columns>
        <columns>Incident_End_Date__c</columns>
        <columns>Federal_Cost_Share__c</columns>
        <columns>State_Cost_Share__c</columns>
        <columns>Stage__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo>
            <group>Public_Assistance_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MARS_Incidents</fullName>
        <columns>NAME</columns>
        <columns>Order_No__c</columns>
        <columns>Incident_Start_Date__c</columns>
        <columns>Incident_End_Date__c</columns>
        <columns>Event_Type__c</columns>
        <columns>Available_for_Application__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Available_for_Application__c</field>
            <operation>includes</operation>
            <value>MARS</value>
        </filters>
        <label>MARS Incidents</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Incident Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Incidents</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Financial_Close_Start_Date_EndDate</fullName>
        <active>false</active>
        <description>Financial Close End Date should be greater than Financial Close Start Date</description>
        <errorConditionFormula>AND( ISBLANK( External_Id__c ) ,
(Financial_Close_End_Date__c &lt; Financial_Close_Start_Date__c))</errorConditionFormula>
        <errorDisplayField>Financial_Close_End_Date__c</errorDisplayField>
        <errorMessage>&quot;Financial Close End Date&quot; should be greater than &quot;Financial Close Start Date&quot;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Incident_Start_Date_End_Date_validation</fullName>
        <active>true</active>
        <description>Incident End Date shuold be greater than Incident Start Date</description>
        <errorConditionFormula>AND( ISBLANK( External_Id__c ) ,
(Incident_End_Date__c &lt; Incident_Start_Date__c))</errorConditionFormula>
        <errorDisplayField>Incident_End_Date__c</errorDisplayField>
        <errorMessage>&quot;Incident End Date&quot; should be greater than &quot;Incident Start Date&quot;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Performance_Period_ClosedDate_validation</fullName>
        <active>false</active>
        <description>Performance Period Closed Date should be greater than Incident Declaration Date</description>
        <errorConditionFormula>AND( ISBLANK( External_Id__c ) ,
(Incident_Closed_Date__c &lt; Declaration_Date__c))</errorConditionFormula>
        <errorDisplayField>Incident_Closed_Date__c</errorDisplayField>
        <errorMessage>Performance Period Closed Date should be greater than Incident Declaration Date</errorMessage>
    </validationRules>
</CustomObject>